# RegularPathQuery

./: .gitignore  CMakeLists.txt  README.md  functors.cpp  genLimitRPQ.py  osrpq.dl  osrpq_v1.dl  rpq.dl  synDeg1_17n.dl  visualPlot.py
dbg/: dataset1_deg.csv
include/rpqdb/: Graph.hpp  NFA.hpp  Profiler.hpp
input/: README.md  dataset1.facts
output/: bc_reachable_dataset1.csv
src/: CMakeLists.txt  NFA.cpp  NFA.hpp  prototype.cpp  prototype.hpp  query.cpp  reference_helper  reference_helper.cpp  test.hpp  test_prototype.cpp
tests/: CMakeLists.txt  graphGen.py  test_NFA.cpp  test_graph.cpp  test_nn.cpp  test_ospg.cpp  test_ostc.cpp  test_pg.cpp  test_view_update.cpp  tests.hpp
tests/conf/: cnn.json  disjoint_cycles.json  nn.json  nn_binary_classifier.json  nn_binary_classifier_dbg.json  nn_sparse_dbg.json  path.json  pathbsc.json
tests/resources/: disjoint_cycles_10.txt  disjoint_cycles_100.txt  disjoint_cycles_1000.txt  disjoint_cycles_10000.txt  graph1.txt  graph2.txt  graph_tc.txt  path_10.txt  path_100.txt  path_1000.txt  path_10000.txt  path_100000.txt
util/: generator.py
